syntax = "proto3";

import "collections.proto";

option java_multiple_files = true;
option java_package = "tech.qdrant.grpc";
option java_outer_classname = "QdrantProto";

package qdrant;

service CollectionsInternal {
  rpc Get (GetCollectionInfoRequestInternal) returns (GetCollectionInfoResponse) {}
}

message GetCollectionInfoRequestInternal {
  GetCollectionInfoRequest get_collectionInfoRequest = 1;
  uint32 shard_id = 2;
}